--- a/.github/workflows/main_potalmerchant.yml
+++ b/.github/workflows/main_potalmerchant.yml
@@ -36,7 +36,10 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
