--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd-img-crop": "^4.12.2",
     "antd-mask-input": "^2.0.7",
     "axios": "^1.4.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
     "format-duration": "^3.0.2",
     "moment": "^2.29.4",
