--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "node server.js",
     "lint:fix": "next lint --fix",
