--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "@tanstack/react-query": "^4.33.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/node": "18.14.2",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.28",
@@ -29,6 +30,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
     "format-duration": "^3.0.2",
+    "html-react-parser": "^5.1.12",
     "moment": "^2.29.4",
     "next": "13.2.1",
     "nprogress": "^0.2.0",
