--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-simple-oauth2-login": "^0.5.4",
     "recharts": "^2.6.2",
     "sass": "^1.62.1",
+    "slugify": "^1.6.6",
     "socket.io-client": "^4.6.1",
     "typescript": "4.9.5",
     "video.js": "^8.3.0",
