--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
     "format-duration": "^3.0.2",
+    "framer-motion": "^11.3.31",
     "html-react-parser": "^5.1.12",
     "moment": "^2.29.4",
     "next": "13.2.1",
@@ -43,6 +44,7 @@
     "react-simple-oauth2-login": "^0.5.4",
     "recharts": "^2.6.2",
     "sass": "^1.62.1",
+    "simple-zustand-devtools": "^1.1.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.6.1",
     "typescript": "4.9.5",
