--- a/.github/workflows/main_potalmerchant.yml
+++ b/.github/workflows/main_potalmerchant.yml
@@ -30,7 +30,16 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present 
+          npm run test --if-present
+        env:
+          API_URL: ${{ secrets.API_URL }}
+          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+          NEXT_PUBLIC_GHL_CLIENT_ID: ${{ secrets.NEXT_PUBLIC_GHL_CLIENT_ID }}
+          NEXT_PUBLIC_GHL_REDIRECT_URI: ${{ secrets.NEXT_PUBLIC_GHL_REDIRECT_URI }}
+          NEXT_PUBLIC_GHL_BASE_URL: ${{ secrets.NEXT_PUBLIC_GHL_BASE_URL }}
+          CALENDLY_CLIENT_ID: ${{ secrets.CALENDLY_CLIENT_ID }}
+          CALENDLY_REDIRECT_URI: ${{ secrets.CALENDLY_REDIRECT_URI }}
+          NEXT_PUBLIC_OAUTH_REDIRECT_URI: ${{ secrets.NEXT_PUBLIC_OAUTH_REDIRECT_URI }}
 
       - name: Login to Azure
         uses: azure/login@v1
@@ -46,4 +55,3 @@ jobs:
           app-name: 'potalmerchant'
           slot-name: 'Production'
           package: .
-          
